# FromArducamToWeb

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/camera_webserver/: CMakeLists.txt  ionic_camera_webserver.c  web_page.h
libraries/: CMakeLists.txt
libraries/arducam/: arducam.c  arducam.h  ov2640.h
port/: CMakeLists.txt
port/http_server/inc/: httpCamera.h  httpUtil.h
port/http_server/src/: httpCamera.c  httpServer.c  httpUtil.c
port/ioLibrary_Driver/src/: w5x00_spi.c
